<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/user_input"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_weight=".5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/from_header"
                android:textSize="30dp"/>

            <RadioGroup
                android:id="@+id/from_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="180dp">
                <RadioButton
                    android:id="@+id/from_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/celsius_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/from_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/fahrenheit_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/from_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/kelvin_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/from_rankin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/rankin_title"
                    android:textSize="30dp"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_weight=".5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/to_header"
                android:textSize="30dp"/>

            <RadioGroup
                android:id="@+id/to_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="180dp">
                <RadioButton
                    android:id="@+id/to_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/celsius_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/to_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/fahrenheit_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/to_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/kelvin_title"
                    android:textSize="30dp"/>

                <RadioButton
                    android:id="@+id/to_rankin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/rankin_title"
                    android:textSize="30dp"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/convert_button"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/conversion_output"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:padding="15dp"
        android:text="@string/conversion_text"
        android:gravity="center_horizontal"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/equation_output"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/equation_text"
        android:gravity="center_horizontal"
        android:textSize="15dp"/>

</LinearLayout>